# fmu-sim2seis

./: .gitattributes  .gitignore  404.html  README.md  attribute-maps.html  clean-up.html  command-line-interface.html  ert-configuration.html  hashmap.json  index.html  input-output.html  observed-data.html  pyproject.toml  qc.html  qc_jupyter_notebook.html  qc_resinsight.html  qc_rms.html  relative-seismic-inversion.html  seismic-forward.html  sim2seis-configuration.html  static-and-dynamic-input.html  time-depth-conversion.html  use-cases.html
.github/: copilot-instructions.md  release-please-config.json
.github/workflows/: build_and_test.yml  build_test_deploy.yml  linting.yml  release-please.yml
ERT/: run_cleanup.ert  run_sim2seis.ert
Scripts/: cli_run.sh  compare_si4ti.py  debug_lines.py
assets/: app.D1hP4ufz.js  attribute-maps.md.B9TBkWP2.js  attribute-maps.md.B9TBkWP2.lean.js  attribute-maps.md.BVwu_2Dh.js  attribute-maps.md.BVwu_2Dh.lean.js  attribute-maps.md.DGuMnjmp.js  attribute-maps.md.Q4u8Xa4E.js  attribute-maps.md.Z_zltmzM.js  attribute-maps.md.Z_zltmzM.lean.js  attribute-maps.md.gtRla1wf.js  attribute-maps.md.gtRla1wf.lean.js  attribute-maps.md.qiYdlicg.js  clean-up.md.3JO8LaJq.js  clean-up.md.3JO8LaJq.lean.js  clean-up.md.BUkujfdA.js  clean-up.md.BUkujfdA.lean.js  clean-up.md.C30a8MWl.js  clean-up.md.C30a8MWl.lean.js  clean-up.md.C7oPFLrE.js  clean-up.md.C7oPFLrE.lean.js  clean-up.md.C8Yuxtft.js  clean-up.md.C8Yuxtft.lean.js  clean-up.md.DZLq5aOB.js  clean-up.md.DZLq5aOB.lean.js  clean-up.md.ERbMriyq.js  clean-up.md.ERbMriyq.lean.js  clean-up.md.j0oX6LSO.js  command-line-interface.md.CQk90v_4.js  command-line-interface.md.CQk90v_4.lean.js  command-line-interface.md.CTm1sIb1.js  command-line-interface.md.CTm1sIb1.lean.js  command-line-interface.md.CaV0hT0L.js  command-line-interface.md.ChjJMiTP.js  command-line-interface.md.ChjJMiTP.lean.js  ert-configuration.md.1CgG4vr5.js  ert-configuration.md.1CgG4vr5.lean.js  ert-configuration.md.Bb9u590b.js  ert-configuration.md.C6xPNBW_.js  ert-configuration.md.C6xPNBW_.lean.js  ert-configuration.md.D_RvxbRl.js  (+120 more)
assets/chunks/: framework.xmna4E1W.js  theme.DM8lQ73g.js
documentation/: package-lock.json  package.json
documentation/docs/: attribute-maps.md  clean-up.md  clean_up.md  command-line-interface.md  documentation_through_notebook.ipynb  ert-configuration.md  index.md  input-output.md  observed-data.md  qc.md  qc_jupyter_notebook.md  qc_resinsight.md  qc_rms.md  relative-seismic-inversion.md  seismic-forward.md  seismic_forward.md  sim2seis-configuration.md  static-and-dynamic-input.md  static_and_dynamic_input.md  time-depth-conversion.md  use-cases.md
documentation/docs/.vitepress/: config.mts
documentation/docs/yaml-edit/: YamlEdit.tsx  schema.tsx
src/fmu/sim2seis/cleanup/: __main__.py
src/fmu/sim2seis/forward_models/: __init__.py  sim2seis_cleanup.py  sim2seis_map_attribute.py  sim2seis_observed_data.py  sim2seis_relative_inversion.py  sim2seis_seismic_forward.py
src/fmu/sim2seis/hook_implementations/: jobs.py
src/fmu/sim2seis/map_attributes/: __main__.py  _dump_results.py  _retrieve_results.py
src/fmu/sim2seis/observed_data/: __main__.py  _dump_results.py  depth_convert_observed_data.py  import_time_data.py  symlink.py
src/fmu/sim2seis/seismic_fwd/: __main__.py  _dump_results.py  seismic_diff.py  seismic_forward.py
src/fmu/sim2seis/seismic_inversion/: __main__.py  _dump_results.py  _retrieve_results.py  depth_convert_rel_ai.py  relative_seismic_inversion.py
src/fmu/sim2seis/utilities/: __init__.py  argument_parser.py  dump_results.py  export_with_dataio.py  get_surfaces.py  get_yaml_file.py  import_cubes.py  interval_parser.py  libgeneral.py  libseis.py  link_and_folder_utils.py  obs_data_config_validation.py  seis_dates.py  seis_diff_dates.py  sim2seis_class_definitions.py  sim2seis_config_validation.py
tests/: conftest.py  test_class_difference_seismic.py  test_class_seismic_attribute.py  test_class_seismic_date.py  test_class_seismic_name.py  test_class_single_seismic.py  test_div_utilities.py  test_interval_parser.py  test_read_yaml_file.py  test_remove_pickle.py  test_run_sim2seis_ci.py  test_run_sim2seis_ert.py  test_sim2seis_config.py  test_utilities.py
tests/data/ert/model/: run_sim2seis.ert
tests/data/fmuconfig/output/: global_variables.yml  global_variables.yml.tmpl  global_variables_pred.yml.tmpl
tests/data/share/observations/cubes/: seismic--amplitude_depth--20180701_20180101.segy  seismic--relai_depth--20180701_20180101.segy  seismic--relai_depth--20200701_20180101.segy
tests/data/share/observations/maps/: basevolantis--depth.gri  msl--depth.gri
tests/data/share/preprocessed/cubes/: seismic--amplitude_depth--20200701_20180101.segy  seismic--amplitude_full_depth--20190701_20180101.segy  seismic--relai_depth--20190701_20180101.segy
tests/data/share/preprocessed/maps/: basevelmodel--depth.gri  basevelmodel--time.gri  basevolantis--time.gri  topvolantis--depth.gri  topvolantis--time.gri
tests/data/share/results/maps/: msl--time.gri
tests/data/sim2seis/input/attribute_maps/: simgrid_maps4ahm--region.roff  simgrid_maps4ahm--zone.roff
tests/data/sim2seis/input/pem/: simgrid.roff
tests/data/sim2seis/input/seismic_forward/: TopVolantis.txt  seismiclayout.segy
tests/data/sim2seis/model/: data_intervals_drogon.yml  model_file.xml  model_file_far.xml  model_file_near.xml  model_file_twt.xml  modelled_data_intervals_drogon.yml  obs_data_config.yml  observed_data_intervals_drogon.yml  sim2seis_combined_config.yml  sim2seis_config.yml  sim2seis_seismic_fwd_only_config.yml
(+12 files in other folders)
