[build-system]
requires = [
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fmu/sim2seis/version.py"

[project]
name = "fmu-sim2seis"
description = "sim2seis"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Equinor", email = "fg_fmu-atlas@equinor.com" },
]
keywords = ["energy", "subsurface", "seismic", "scientific", "engineering"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["version"]
dependencies = [
    "numpy >= 1.24.3",
    "pandas >= 2.0.2",
    "xtgeo >= 3.7.1",
    "fmu-tools >= 1.16.0",
    "fmu-config",
    "fmu-dataio",
    "fmu-pem",
    "pydantic",
    "ert",
    "seismic-forward",
    "si4ti",
]

[project.optional-dependencies]
tests = [
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]
docs = [
    "autoapi",
    "sphinx",
    "sphinx-argparse",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/equinor/fmu-sim2seis"
Repository = "https://github.com/equinor/fmu-sim2seis"

[project.scripts]
sim2seis_seismic_forward = "fmu.sim2seis.seismic_fwd:main"
sim2seis_relative_ai = "fmu.sim2seis.seismic_inversion:main"
sim2seis_observed_data = "fmu.sim2seis.observed_data:main"
sim2seis_map_attributes = "fmu.sim2seis.map_attributes:main"
sim2seis_cleanup = "fmu.sim2seis.cleanup:main"

[project.entry-points.ert]
sim2seis_jobs = "fmu.sim2seis.hook_implementations.jobs"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
# Module docstrings are not required, there are other means of documenting at
# that level
disable = "missing-module-docstring"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "W",
    "RUF",
    "UP",
    "FURB",
    "PL",
]

ignore = [
  "PLW2901",  # redefined-loop-name
  "PLR2004",  # magic-value-comparison
  "PLR0915",  # too-many-statements
  "PLR0912",  # too-many-branches
  "PLR0911",  # too-many-return-statements
  "PLC2701",  # import-private-name
  "PLR6201",  # literal-membership
  "PLR0914",  # too-many-locals
  "PLR6301",  # no-self-use
  "PLW1641",  # eq-without-hash
  "PLR0904",  # too-many-public-methods
  "PLR1702",  # too-many-nested-blocks
  "PLW3201",  # bad-dunder-method-name
  "C901",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
skip-magic-trailing-comma = false

